Prepare for release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{ include = "tor_python_easy" }]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+requests = "^2.26.0"
 
 
 [build-system]
