--- a/.github/workflows/python-master.yml
+++ b/.github/workflows/python-master.yml
@@ -9,22 +9,18 @@ jobs:
     environment: Deployment
     strategy:
       fail-fast: false
-      matrix:
-        python-version: [ 3.9.6 ]
-        poetry-version: [ 1.1.5 ]
-        os: [ ubuntu-20.04 ]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
       - uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: python-version
       - name: Install poetry
         uses: abatilo/actions-poetry@v2.0.0
         with:
-          poetry-version: ${{ matrix.poetry-version }}
+          poetry-version: 1.4.2
       - name: Install deps
         run: poetry install -vv
       - name: Build and publish
