--- a/.github/workflows/python-master.yml
+++ b/.github/workflows/python-master.yml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v2
         with:
-          python-version: python-version
+          python-version: 3.9
       - name: Install poetry
         uses: abatilo/actions-poetry@v2.0.0
         with:
